--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build.prod": "ng build --aot --prod --progress false --base-href \"https://fabianebiah.github.io/fabianebiah/fabianebiah.github.io/\""
   },
   "private": true,
   "dependencies": {
